Source/WebCore/workers/WorkerGlobalScope.h
@@ -97,6 +97,8 @@ public:
     const String& inspectorIdentifier() const LIFETIME_BOUND { return m_inspectorIdentifier; }
 
     IDBClient::IDBConnectionProxy* NODELETE idbConnectionProxy() final;
+    void replaceIDBConnectionProxy(RefPtr<IDBClient::IDBConnectionProxy>&&);
+    WEBCORE_EXPORT static void replaceIDBConnectionProxyOnAllWorkers(RefPtr<IDBClient::IDBConnectionProxy>&&);
     void suspend() final;
     void resume() final;
     GraphicsClient* graphicsClient() final;
@@ -229,7 +231,7 @@ private:
 
     const Ref<SecurityOrigin> m_topOrigin;
 
-    const RefPtr<IDBClient::IDBConnectionProxy> m_connectionProxy;
+    RefPtr<IDBClient::IDBConnectionProxy> m_connectionProxy;
 
     const RefPtr<SocketProvider> m_socketProvider;
 
